--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="style.css" type="text/css" rel="stylesheet"/>
-    <title>Tami Rahman</title>
+    <title>Ibrahim haque ebo</title>
   </head>
   <body>
 
@@ -50,7 +50,7 @@
           <div class="container-fluid">
               <div class="row">
                   <div class="col-lg-12">
-                      <h1 class="header-tami">Tami Rahman(Tami )</h1>
+                      <h1 class="header-tami">Ibrahim haque ebo</h1>
 
                   </div>
 
@@ -58,7 +58,7 @@
               <div class="row">
                   <div class="col-lg-4">
                       <div class="img-t">
-                        <img src="img/tami111.jpg" class="rah"  alt="">
+                        <img src="img/ebo.jpg" class="rah"  alt="">
 
                       </div>
                       <div class="prag">
@@ -70,7 +70,7 @@
                   </div>
                   <div class="col-lg-4">
                     <div class="img-t">
-                        <img src="img/tami2.jpg" class="rah"  alt="">
+                        <img src="img/ebo.jpg" class="rah"  alt="">
 
                       </div>
                       <div class="prag">
@@ -83,7 +83,7 @@
                 </div>
                 <div class="col-lg-4">
                     <div class="img-t">
-                        <img src="img/tami3.jpg" class="rah"  alt="">
+                      <img src="img/ebo.jpg" class="rah"  alt="">
 
                       </div>
                       <div class="prag">
@@ -104,7 +104,7 @@
             <div class="row">
                 <div class="col-lg-4">
                     <div class="img-t">
-                      <img src="img/tami4.jpg" class="rah"  alt="">
+                      <img src="img/ebo.jpg" class="rah"  alt="">
 
                     </div>
                     <div class="prag">
@@ -116,7 +116,7 @@
                 </div>
                 <div class="col-lg-4">
                   <div class="img-t">
-                      <img src="img/tami5.jpg" class="rah"  alt="">
+                    <img src="img/ebo.jpg" class="rah"  alt="">
 
                     </div>
                     <div class="prag">
@@ -129,7 +129,7 @@
               </div>
               <div class="col-lg-4">
                   <div class="img-t">
-                      <img src="img/tami6.jpg" class="rah"  alt="">
+                    <img src="img/ebo.jpg" class="rah"  alt="">
 
                     </div>
                     <div class="prag">
@@ -150,7 +150,7 @@
             <div class="row">
                 <div class="col-lg-4">
                     <div class="img-t">
-                      <img src="img/tami7.jpg" class="rah"  alt="">
+                      <img src="img/ebo.jpg" class="rah"  alt="">
 
                     </div>
                     <div class="prag">
@@ -162,7 +162,7 @@
                 </div>
                 <div class="col-lg-4">
                   <div class="img-t">
-                      <img src="img/tami8.jpg" class="rah"  alt="">
+                    <img src="img/ebo.jpg" class="rah"  alt="">
 
                     </div>
                     <div class="prag">
@@ -175,7 +175,7 @@
               </div>
               <div class="col-lg-4">
                   <div class="img-t">
-                      <img src="img/tami9.jpg" class="rah"  alt="">
+                    <img src="img/ebo.jpg" class="rah"  alt="">
 
                     </div>
                     <div class="prag">
@@ -196,8 +196,7 @@
             <div class="row">
                 <div class="col-lg-4">
                     <div class="img-t">
-                      <img src="img/tami10.jpg" class="rah"  alt="">
-
+                      <img src="img/ebo.jpg" class="rah"  alt="">
                     </div>
                     <div class="prag">
                         <p>দেখেছি রূপসাগরে </p>
@@ -210,7 +209,7 @@
                 </div>
                 <div class="col-lg-4">
                   <div class="img-t">
-                      <img src="img/tami11.jpg" class="rah"  alt="">
+                    <img src="img/ebo.jpg" class="rah"  alt="">
 
                     </div>
                     <div class="prag">
@@ -223,7 +222,7 @@
               </div>
               <div class="col-lg-4">
                   <div class="img-t">
-                      <img src="img/tami12.jpg" class="rah"  alt="">
+                    <img src="img/ebo.jpg" class="rah"  alt="">
 
                     </div>
                     <div class="prag">
